--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "rxjs-take-while-inclusive": "^2.1.0",
     "text-mask-addons": "^3.7.2",
     "theme-ui": "^0.3.1",
+    "tiny-warning": "^1.0.3",
     "ts-essentials": "^7.0.1",
     "url-loader": "^4.1.0",
     "uuid": "^8.3.0",
