--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "next-i18next": "^8.1.0",
     "next-pwa": "^3.1.5",
     "nextjs-sitemap-generator": "^1.1.3",
+    "node-fetch": "^2.6.7",
     "nodemailer": "^6.4.14",
     "nyc": "^15.1.0",
     "object-assign": "4.1.1",
