--- a/.env
+++ b/.env
@@ -4,18 +4,18 @@ CHALLENGE_JWT_SECRET="ABC123"
 USER_JWT_SECRET="A123124124"
 
 API_HOST="http://localhost:3000"
-MIXPANEL_ENV="development"
+MIXPANEL_ENV="mvp"
 # This key is of a test env. You can use your own for developing purposes.
-MIXPANEL_KEY="b10b850880cb0a8557d878c2e6024d03"
+MIXPANEL_KEY=""
 COMMIT_SHA="dev"
-INFURA_PROJECT_ID="de82b2d602264e4fbc0929dec0c45baa"
+INFURA_PROJECT_ID=""
 # This is a test value for local development
-INFURA_PROJECT_ID_BACKEND="de82b2d602264e4fbc0929dec0c45baa"
-ETHERSCAN_API_KEY="34JVYM6RPM3J1SK8QXQFRNSHD9XG4UHXVU"
+INFURA_PROJECT_ID_BACKEND=""
+ETHERSCAN_API_KEY=""
 USE_TERMS_OF_SERVICE=0
 
-MULTIPLY_PROXY_ACTIONS=0x2a49eae5cca3f050ebec729cf90cc910fadaf7a2
-EXCHANGE=0xb5eB8cB6cED6b6f8E13bcD502fb489Db4a726C7B
-DUMMY_EXCHANGE=0x7bc06c482DEAd17c0e297aFbC32f6e63d3846650
+MULTIPLY_PROXY_ACTIONS=0x0000000000000000000000000000000000000000
+EXCHANGE=0x0000000000000000000000000000000000000000
+DUMMY_EXCHANGE=0x0000000000000000000000000000000000000000
 USE_DUMMY=0
 BLOCK_NUMBER=13461200
