--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "postinstall": "rm -f node_modules/web3/index.d.ts && yarn prisma:generate && yarn patch-package && yarn typechain:generate",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build:storybook": "build-storybook",
-    "publish:storybook": "storybook-to-aws-s3"
+    "publish:storybook": "storybook-to-aws-s3",
+    "docker": "docker-compose -f infra/docker-compose.base.yml -f infra/docker-compose.build.yml -f infra/docker-compose.dev.yml --project-name xusd-borrow-dev   --project-directory ./"
   },
   "dependencies": {
     "@gnosis.pm/safe-apps-web3-react": "^0.5.0",
