--- a/infra/docker-compose.base.yml
+++ b/infra/docker-compose.base.yml
@@ -22,6 +22,12 @@ services:
     depends_on:
       - db
 
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 4Gb
+
     environment:
       COMMIT_SHA: ${COMMIT_SHA}
       API_HOST: ${API_HOST}
