--- a/infra/docker-compose.ecs-staging.yml
+++ b/infra/docker-compose.ecs-staging.yml
@@ -7,3 +7,9 @@ x-aws-cloudformation:
         Certificates:
           - CertificateArn: 'arn:aws:acm:ap-south-1:135135176603:certificate/60d2b9e4-65d6-468c-9e90-3de1c8ace136'
         Protocol: HTTPS
+
+    XdcpricepokerTCP3001Listener:
+      Properties:
+        Certificates:
+          - CertificateArn: 'arn:aws:acm:ap-south-1:135135176603:certificate/60d2b9e4-65d6-468c-9e90-3de1c8ace136'
+        Protocol: HTTPS
