--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,91 +28,91 @@ env:
   USE_TERMS_OF_SERVICE: 0
 
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
-  #     - name: Set up Docker Buildx
-  #       id: buildx
-  #       uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
 
-  #     - name: Cache Docker layers
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: |
-  #           /tmp/.buildx-cache-nextjs
-  #           /tmp/.buildx-cache-nginx
-  #           /tmp/.buildx-cache-xdc-price-poker
-  #         key: ${{ runner.os }}-tokenization-buildx-${{ github.sha }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-tokenization-buildx-
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: |
+            /tmp/.buildx-cache-nextjs
+            /tmp/.buildx-cache-nginx
+            /tmp/.buildx-cache-xdc-price-poker
+          key: ${{ runner.os }}-tokenization-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-tokenization-buildx-
 
-  #     - name: ECR docker login
-  #       run:
-  #         aws ecr get-login-password | docker login --username AWS --password-stdin
-  #         135135176603.dkr.ecr.ap-south-1.amazonaws.com
+      - name: ECR docker login
+        run:
+          aws ecr get-login-password | docker login --username AWS --password-stdin
+          135135176603.dkr.ecr.ap-south-1.amazonaws.com
 
-  #     - name: Extract commit hash
-  #       id: vars
-  #       shell: bash
-  #       run: |
-  #         echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      - name: Extract commit hash
+        id: vars
+        shell: bash
+        run: |
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-  #     - name: Build Nginx proxy
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         context: .
-  #         file: docker/nginx/Dockerfile
-  #         push: true
-  #         tags: 135135176603.dkr.ecr.ap-south-1.amazonaws.com/xusd-borrow-nginx:latest
-  #         cache-from: type=local,src=/tmp/.buildx-cache-nginx
-  #         cache-to: type=local,dest=/tmp/.buildx-cache-nginx-new,mode=max
+      - name: Build Nginx proxy
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: docker/nginx/Dockerfile
+          push: true
+          tags: 135135176603.dkr.ecr.ap-south-1.amazonaws.com/xusd-borrow-nginx:latest
+          cache-from: type=local,src=/tmp/.buildx-cache-nginx
+          cache-to: type=local,dest=/tmp/.buildx-cache-nginx-new,mode=max
 
-  #     - name: Build XDC price poker
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         context: .
-  #         file: docker/xdc-price-poker/Dockerfile
-  #         push: true
-  #         tags: 135135176603.dkr.ecr.ap-south-1.amazonaws.com/xdc-price-poker:latest
-  #         cache-from: type=local,src=/tmp/.buildx-cache-xdc-price-poker
-  #         cache-to: type=local,dest=/tmp/.buildx-cache-xdc-price-poker-new,mode=max
+      - name: Build XDC price poker
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: docker/xdc-price-poker/Dockerfile
+          push: true
+          tags: 135135176603.dkr.ecr.ap-south-1.amazonaws.com/xdc-price-poker:latest
+          cache-from: type=local,src=/tmp/.buildx-cache-xdc-price-poker
+          cache-to: type=local,dest=/tmp/.buildx-cache-xdc-price-poker-new,mode=max
 
-  #     - name: Build Next.js app
-  #       env:
-  #         SHA_TAG: ${{ steps.vars.outputs.sha_short }}
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         context: .
-  #         build-args: |
-  #           COMMIT_SHA=${{ env.SHA_TAG }}
-  #           API_HOST=${{ env.API_HOST }}
-  #           MIXPANEL_ENV=${{ env.MIXPANEL_ENV }}
-  #           MIXPANEL_KEY=${{ env.MIXPANEL_KEY }}
-  #           INFURA_PROJECT_ID=${{ env.INFURA_PROJECT_ID }}
-  #           ETHERSCAN_API_KEY=${{ env.ETHERSCAN_API_KEY }}
-  #           SHOW_BUILD_INFO=${{ env.SHOW_BUILD_INFO }}
-  #           NODE_ENV=${{ env.NODE_ENV }}
-  #         file: Dockerfile
-  #         push: true
-  #         tags: 135135176603.dkr.ecr.ap-south-1.amazonaws.com/xusd-borrow-nextjs:latest
-  #         cache-from: type=local,src=/tmp/.buildx-cache-nextjs
-  #         cache-to: type=local,dest=/tmp/.buildx-cache-nextjs-new,mode=max
+      - name: Build Next.js app
+        env:
+          SHA_TAG: ${{ steps.vars.outputs.sha_short }}
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          build-args: |
+            COMMIT_SHA=${{ env.SHA_TAG }}
+            API_HOST=${{ env.API_HOST }}
+            MIXPANEL_ENV=${{ env.MIXPANEL_ENV }}
+            MIXPANEL_KEY=${{ env.MIXPANEL_KEY }}
+            INFURA_PROJECT_ID=${{ env.INFURA_PROJECT_ID }}
+            ETHERSCAN_API_KEY=${{ env.ETHERSCAN_API_KEY }}
+            SHOW_BUILD_INFO=${{ env.SHOW_BUILD_INFO }}
+            NODE_ENV=${{ env.NODE_ENV }}
+          file: Dockerfile
+          push: true
+          tags: 135135176603.dkr.ecr.ap-south-1.amazonaws.com/xusd-borrow-nextjs:latest
+          cache-from: type=local,src=/tmp/.buildx-cache-nextjs
+          cache-to: type=local,dest=/tmp/.buildx-cache-nextjs-new,mode=max
 
-  #     - name: Move cache
-  #       run: |
-  #         rm -rf /tmp/.buildx-cache-nextjs
-  #         rm -rf /tmp/.buildx-cache-nginx
-  #         rm -rf /tmp/.buildx-cache-xdc-price-poker
-  #         mv /tmp/.buildx-cache-nextjs-new /tmp/.buildx-cache-nextjs
-  #         mv /tmp/.buildx-cache-nginx-new /tmp/.buildx-cache-nginx
-  #         mv /tmp/.buildx-cache-xdc-price-poker-new /tmp/.buildx-cache-xdc-price-poker
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache-nextjs
+          rm -rf /tmp/.buildx-cache-nginx
+          rm -rf /tmp/.buildx-cache-xdc-price-poker
+          mv /tmp/.buildx-cache-nextjs-new /tmp/.buildx-cache-nextjs
+          mv /tmp/.buildx-cache-nginx-new /tmp/.buildx-cache-nginx
+          mv /tmp/.buildx-cache-xdc-price-poker-new /tmp/.buildx-cache-xdc-price-poker
 
   publish:
     runs-on: ubuntu-latest
-    # needs: build
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Install docker compose
