--- a/xdc-price-poker/.env.example
+++ b/xdc-price-poker/.env.example
@@ -1,5 +1,6 @@
 WALLET_PRIVATE_KEY=
 POKE_TARGET_CONTRACT=0x6911b072DC16Dcc5B55caB7a832cBfcfB3E45069
+SPOTTER_CONTRACT=0x56848a428B5CeD7AdC021C75802ab8390092Ab9E
 JSON_RPC_NODE_URL=https://rpc-apothem.xinfin.yodaplus.net
 INTERVAL=60000
 PORT=3000
