--- a/infra/docker-compose.base.yml
+++ b/infra/docker-compose.base.yml
@@ -20,6 +20,7 @@ services:
     environment:
       WALLET_PRIVATE_KEY: ${POKER_WALLET_PRIVATE_KEY}
       POKE_TARGET_CONTRACT: "0x6911b072DC16Dcc5B55caB7a832cBfcfB3E45069"
+      SPOTTER_CONTRACT: "0x56848a428B5CeD7AdC021C75802ab8390092Ab9E"
       JSON_RPC_NODE_URL: 'https://rpc-apothem.xinfin.yodaplus.net'
       PORT: 3001
 
