--- a/infra/docker-compose.base.yml
+++ b/infra/docker-compose.base.yml
@@ -21,6 +21,7 @@ services:
       WALLET_PRIVATE_KEY: ${POKER_WALLET_PRIVATE_KEY}
       POKE_TARGET_CONTRACT: "0x6911b072DC16Dcc5B55caB7a832cBfcfB3E45069"
       SPOTTER_CONTRACT: "0x56848a428B5CeD7AdC021C75802ab8390092Ab9E"
+      JUG_CONTRACT: "0x6cbe426382cDFf2B2C0E00B865E5358fd59829Ff"
       JSON_RPC_NODE_URL: 'https://rpc-apothem.xinfin.yodaplus.net'
       PORT: 3001
 
