--- a/package.json
+++ b/package.json
@@ -191,7 +191,8 @@
     "node-sass": "^6.0.1",
     "patch-package": "^6.2.2",
     "pg-promise": "^10.5.3",
-    "prettier": "^2.0.1",
+    "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
     "storybook-addon-i18next": "^1.3.0",
