use dedicated Poker contract

--- a/infra/docker-compose.base.yml
+++ b/infra/docker-compose.base.yml
@@ -19,9 +19,8 @@ services:
 
     environment:
       WALLET_PRIVATE_KEY: ${POKER_WALLET_PRIVATE_KEY}
-      POKE_TARGET_CONTRACT: "0x6911b072DC16Dcc5B55caB7a832cBfcfB3E45069"
-      SPOTTER_CONTRACT: "0x56848a428B5CeD7AdC021C75802ab8390092Ab9E"
-      JUG_CONTRACT: "0x6cbe426382cDFf2B2C0E00B865E5358fd59829Ff"
+      POKE_TARGET_CONTRACT: '0x6911b072DC16Dcc5B55caB7a832cBfcfB3E45069'
+      POKER_CONTRACT: '0x324b05Df701F69dbC9DBb58bDd9D14c988C9D2D7'
       JSON_RPC_NODE_URL: 'https://rpc-apothem.xinfin.yodaplus.net'
       PORT: 3001
 
