update poker with osm

--- a/infra/docker-compose.base.yml
+++ b/infra/docker-compose.base.yml
@@ -21,6 +21,7 @@ services:
       WALLET_PRIVATE_KEY: ${POKER_WALLET_PRIVATE_KEY}
       POKE_TARGET_CONTRACT: '0x6911b072DC16Dcc5B55caB7a832cBfcfB3E45069'
       POKER_CONTRACT: '0x324b05Df701F69dbC9DBb58bDd9D14c988C9D2D7'
+      OSM: '["0x4e1955cCdE51fc1cF58757fdF114839de100837f"]'
       JSON_RPC_NODE_URL: 'https://rpc-apothem.xinfin.yodaplus.net'
       PORT: 3001
 
