--- a/infra/docker-compose.ecs.yml
+++ b/infra/docker-compose.ecs.yml
@@ -2,6 +2,49 @@ version: '3.8'
 
 x-aws-cloudformation:
   Resources:
+    XdcpricepokerService:
+      Properties:
+        DeploymentConfiguration:
+          MaximumPercent: 100
+          MinimumHealthyPercent: 0
+
+    DbService:
+      Properties:
+        DeploymentConfiguration:
+          MaximumPercent: 100
+          MinimumHealthyPercent: 0
+
+    SecretReadRole:
+      Properties:
+        AssumeRolePolicyDocument:
+          Statement:
+            - Action:
+                - sts:AssumeRole
+              Condition: {}
+              Effect: Allow
+              Principal:
+                Service: ecs-tasks.amazonaws.com
+          Version: 2012-10-17
+        Policies:
+          - PolicyDocument:
+              Statement:
+                - Action:
+                    - secretsmanager:GetResourcePolicy
+                    - secretsmanager:GetSecretValue
+                    - secretsmanager:DescribeSecret
+                    - secretsmanager:ListSecretVersionIds
+                  Effect: Allow
+                  Resource:
+                    - Ref: Secret
+              Version: 2012-10-17
+            PolicyName: SecretsReadPolicy
+      Type: AWS::IAM::Role
+
+    XdcpricepokerTaskDefinition:
+      Properties:
+        TaskRoleArn:
+          Ref: SecretReadRole
+
     NginxTCP80TargetGroup:
       Properties:
         HealthCheckPath: /
